--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ packaging==24.0
 pillow==10.3.0
 psycopg2-binary==2.9.9
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 s3transfer==0.10.1
 six==1.16.0
 sqlparse==0.5.0
